tests/errors/test-deleted-function.script

int f(int) = delete;
f(5);

//>3:2: error C64: call to deleted function.
